Fix overflow on trending tab page

--- a/src/renderer/views/Trending/Trending.css
+++ b/src/renderer/views/Trending/Trending.css
@@ -6,7 +6,6 @@
 
 .trendingInfoTabs {
   inline-size: 100%;
-  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin-block: -3px 10px;
   color: var(--tertiary-text-color);
